--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-name: Run Test
+name: Run test on dev
 
 on:
     workflow_dispatch:
@@ -23,4 +23,4 @@ jobs:
         - name: Unarchive test files
           run: unzip one-of-each-type.zip
         - name: Run the test
-          run: python run_test.py dev ${{secrets.DEV_API_KEY}} files/
+          run: python run_test.py dev "${{secrets.DEV_API_KEY}}" files/
