Remove Permanent API key
The Permanent API no longer requires an API key. Remove it from the
required arguments, and stop sending it in requests to the API.

PER-8278 Rotate or delete Permanent API key

--- a/.github/workflows/run-staging.yml
+++ b/.github/workflows/run-staging.yml
@@ -23,4 +23,4 @@ jobs:
         - name: Unarchive test files
           run: unzip one-of-each-type.zip
         - name: Run the test
-          run: python run_test.py staging "${{secrets.STAGING_API_KEY}}" files/
+          run: python run_test.py staging files/
