--- a/.github/workflows/run-dev.yml
+++ b/.github/workflows/run-dev.yml
@@ -23,4 +23,4 @@ jobs:
         - name: Unarchive test files
           run: unzip one-of-each-type.zip
         - name: Run the test
-          run: python run_test.py dev "${{secrets.DEV_API_KEY}}" files/
+          run: python run_test.py dev files/
