Update actions to use repository dispatch mechanism
https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows#repository_dispatch
Also, add csv with validation information for uploaded files.

Add stub for validation logic

Pylint imports cleanup

--- a/.github/workflows/run-prod-async.yml
+++ b/.github/workflows/run-prod-async.yml
@@ -1,8 +1,8 @@
-name: Run shortlist (dev)
+name: Upload all supported file types (prod) 
 
 on:
-  repository_dispatch:
-    types: [dev-deployed] 
+  schedule:
+    - cron:  '0 0 * * * *'
 
 jobs:
   execute:
@@ -20,8 +20,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }} 
       - name: Download test files
-        run: aws s3 cp s3://permanent-repos/test_files/critical-path.zip .
+        run: aws s3 cp s3://permanent-repos/test_files/one-of-each-type.zip .
       - name: Unarchive test files
-        run: unzip critical-path.zip
+        run: unzip one-of-each-type.zip
       - name: Run the test
-        run: python -m permanent_upload dev files/
+        run: python -m permanent_upload www files/
