--- a/.github/workflows/run-prod.yml
+++ b/.github/workflows/run-prod.yml
@@ -27,6 +27,7 @@ jobs:
         run: python -m permanent_upload www files/
   notify:
     runs-on: ubuntu-latest
+    if: always()
     needs: execute
     steps:
       - name: Post a message in slack
