--- a/.github/workflows/run-dev.yml
+++ b/.github/workflows/run-dev.yml
@@ -3,6 +3,8 @@ name: Run shortlist (dev)
 on:
   repository_dispatch:
     types: [dev_deployed]
+  push:
+
 
 jobs:
   execute:
@@ -27,7 +29,7 @@ jobs:
         run: python -m permanent_upload dev files/
   notify:
     runs-on: ubuntu-latest
-    if: always()
+    if: ${{ github.event.repository_dispatch && always() }}
     needs: execute
     steps:
       - name: Post a message in slack
