--- a/.github/workflows/run-dev.yml
+++ b/.github/workflows/run-dev.yml
@@ -29,7 +29,7 @@ jobs:
         run: python -m permanent_upload dev files/
   notify:
     runs-on: ubuntu-latest
-    if: ${{ github.event.repository_dispatch && always() }}
+    if: always()
     needs: execute
     steps:
       - name: Post a message in slack
