--- a/js/package.json
+++ b/js/package.json
@@ -2,9 +2,11 @@
   "name": "functional-test",
   "version": "0.0.0",
   "description": "A functional test for Permanent.org",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cypress:open": "cypress open",
+    "start": "cypress run",
+    "lint": "eslint .",
+    "test": "npm start"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,20 @@
   "bugs": {
     "url": "https://github.com/PermanentOrg/functional-test/issues"
   },
-  "homepage": "https://github.com/PermanentOrg/functional-test#readme"
+  "homepage": "https://github.com/PermanentOrg/functional-test#readme",
+  "devDependencies": {
+    "eslint": "^8.46.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@tsconfig/node18-strictest": "^1.0.0",
+    "cypress": "^12.17.3"
+  }
 }
