--- a/js/package.json
+++ b/js/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@tsconfig/node18-strictest": "^1.0.0",
+    "@types/node": "^20.4.9",
     "cypress": "^12.17.3"
   }
 }
