Add upload test suite
Add the suite of tests for file uploads. This version of the tests waits
for an arbitrary amount of time for processing to complete before
testing the files.

PER-9320: Write upload test suite

--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -4,7 +4,8 @@
     "ignoreDeprecations": "5.0",
     "target": "es5",
     "lib": ["es5", "dom"],
-    "types": ["cypress", "node"]
+    "types": ["cypress", "node"],
+    "resolveJsonModule": true
   },
   "include": ["**/*.ts"]
 }
